<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_LFE_VAC_PMPS" Id="{4625b23c-c93c-4b67-8375-0fbf2be37f8b}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL

//Example implementation of the FFO
    {attribute 'pytmc' := '
    pv: PLC:LFE:VAC:FFO:01
    '}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PLC_E1_EL2202]^Channel 1^Output'}
    g_FastFaultOutput1  :   FB_HardwareFFOutput :=(i_sNetID:='172.21.88.66.1.1');	//FFO for ST1L0_XTES's Upstream Components

    {attribute 'pytmc' := '
    pv: PLC:LFE:VAC:FFO:02
    '}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PLC_E1_EL2202]^Channel 2^Output'}
    g_FastFaultOutput2  :   FB_HardwareFFOutput :=(i_sNetID:='172.21.88.66.1.1');	//FFO for ST1L0_XTES's Downstream Components

    {attribute 'pytmc' := '
    pv: PLC:LFE:VAC:FFO:04
    '}
    g_FastFaultOutput4  :   FB_HardwareFFOutput :=(i_sNetID:='172.21.88.66.1.1');	// FFO for valves that are downstream of the optics and upstream of ST1L1 on the L1 line.

    {attribute 'pytmc' := '
    pv: PLC:LFE:VAC:RESET:FF1
    '}
    xReset_PMPS_FFO1	:	BOOL	:=	FALSE;		//FFO RESET for ST1L0_XTES's Upstream Components
    {attribute 'pytmc' := '
    pv: PLC:LFE:VAC:RESET:FF2
    '}
    xReset_PMPS_FFO2	:	BOOL	:=	FALSE;		//FFO RESET for ST1L0_XTES's Downstream Components


    xEBD_FEE_MPS_OK: BOOL := TRUE;
    xH1_1_H1_2_MPS_OK: BOOL;

//Preemptive Arbiter Content
    (*LFE Arbiter Interface*)

    g_fbArbiter1    :   FB_Arbiter(1);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>