<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL_Variables" Id="{0b31be2f-6c9a-4798-a48f-4b64605f971e}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	
	r_Accelerator_Setpoint	: REAL := 1E-12; (*unrealistic setpoint currently*)
	{attribute 'pytmc' := 'pv:VAC:OVRDON'}
	xSystemOverrideMode_EBD	: BOOL := FALSE; (* Global system override for the HXR Vacuum System EBD*)
	xSystemOverrideMode_FEE	: BOOL := FALSE; (* Global system override for the HXR Vacuum System FEE*)
	xSystemOverrideMode_H1_1_H1_2	: BOOL := FALSE; (* Global system override for the HXR Vacuum System Hutch1.1 and Hutch1.2*)
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>